[package]
name = "rust-learning"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "hello"
path = "src/bin/chapters/chapter1/hello.rs"

[[bin]]
name = "variables"
path = "src/bin/chapters/chapter1/variables.rs"


[[bin]]
name = "cast-pointer"
path = "src/bin/chapters/chapter1/casting-pointer.rs"

[[bin]]
name = "functions"
path = "src/bin/chapters/chapter2/functions.rs"


[[bin]]
name = "loops-conditions"
path = "src/bin/chapters/chapter2/loops-conditions.rs"


[[bin]]
name = "match"
path = "src/bin/chapters/chapter2/match-example.rs"


[[bin]]
name = "owner_example"
path = "src/bin/chapters/chapter3/owner-example.rs"

[[bin]]
name = "borrowing-rules"
path = "src/bin/chapters/chapter3/borrowing-rules.rs"

[[bin]]
name = "lifetime"
path = "src/bin/chapters/chapter3/lifetime.rs"


[[bin]]
name = "ref-v-owner"
path = "src/bin/chapters/chapter3/ref-v-owner.rs"

[[bin]]
name = "struct"
path = "src/bin/chapters/chapter4/struct.rs"

[[bin]]
name = "impl-methods"
path = "src/bin/chapters/chapter4/impl-methods.rs"

[[bin]]
name = "enum-example"
path = "src/bin/chapters/chapter4/enum-example.rs"

[[bin]]
name = "generic"
path = "src/bin/chapters/chapter4/generic.rs"

[[bin]]
name = "built-in-result-enum"
path = "src/bin/chapters/chapter4/built-in-result-enum.rs"

[[bin]]
name = "qmark-operator"
path = "src/bin/chapters/chapter4/qmark-operator.rs"






[dependencies]
rand = "0.10.0"
