[package]
name = "rust-learning"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "hello"
path = "src/bin/chapters/chapter1/hello.rs"

[[bin]]
name = "variables"
path = "src/bin/chapters/chapter1/variables.rs"


[[bin]]
name = "cast-pointer"
path = "src/bin/chapters/chapter1/casting-pointer.rs"

[[bin]]
name = "functions"
path = "src/bin/chapters/chapter2/functions.rs"


[[bin]]
name = "loops-conditions"
path = "src/bin/chapters/chapter2/loops-conditions.rs"


[[bin]]
name = "match"
path = "src/bin/chapters/chapter2/match-example.rs"


[[bin]]
name = "owner_example"
path = "src/bin/chapters/chapter3/owner-example.rs"

[[bin]]
name = "borrowing-rules"
path = "src/bin/chapters/chapter3/borrowing-rules.rs"

[[bin]]
name = "lifetime"
path = "src/bin/chapters/chapter3/lifetime.rs"


[[bin]]
name = "ref-v-owner"
path = "src/bin/chapters/chapter3/ref-v-owner.rs"

[[bin]]
name = "struct"
path = "src/bin/chapters/chapter4/struct.rs"

[[bin]]
name = "impl-methods"
path = "src/bin/chapters/chapter4/impl-methods.rs"

[[bin]]
name = "enum-example"
path = "src/bin/chapters/chapter4/enum-example.rs"

[[bin]]
name = "generic"
path = "src/bin/chapters/chapter4/generic.rs"

[[bin]]
name = "built-in-result-enum"
path = "src/bin/chapters/chapter4/built-in-result-enum.rs"

[[bin]]
name = "qmark-operator"
path = "src/bin/chapters/chapter4/qmark-operator.rs"

[[bin]]
name = "vec-str"
path = "src/bin/chapters/chapter5/vec-str.rs"

[[bin]]
name = "vec-demo"
path = "src/bin/chapters/chapter5/vec-demo.rs"

[[bin]]
name = "hash-map"
path = "src/bin/chapters/chapter5/hash-map.rs"

[[bin]]
name = "box-demo"
path = "src/bin/chapters/chapter5/box-demo.rs"


[[bin]]
name = "snake"
path = "src/bin/chapters/snake_game/snake.rs"

[[bin]]
name = "derive-demo"
path = "src/bin/chapters/chapter6/derive-demo.rs"

[[bin]]
name = "derive-thiserror"
path = "src/bin/chapters/chapter6/derive-thiserror.rs"

[[bin]]
name = "more-derive-demo"
path = "src/bin/chapters/chapter6/more-derive-demo.rs"

[[bin]]
name = "border"
path = "src/bin/chapters/chapter7/border.rs"

[[bin]]
name = "RAI"
path = "src/bin/chapters/own_snake/RAI-pattern.rs"


[dependencies]
crossterm = "0.28"
rand = "0.10.0"
thiserror = "1.0"
